# optikpi-datapipeline-sdk

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  package.json
java/: CHANGELOG.md  README.md  pom.xml
java/examples/: .env  README.md  env.example  pom.xml  run.sh
js/: .babelrc  .env  .eslintrc.js  CHANGELOG.md  LICENSE  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js
js/examples/: .env  INTEGRATION_GUIDE.md  README.md  env.example  package.json  test-account-endpoint.js  test-all-endpoints.js  test-batch-operations.js  test-customer-endpoint.js  test-customerext-endpoint.js  test-deposit-endpoint.js  test-gaming-endpoint.js  (+8 more)
php/: .gitignore  README.md  composer.json
python/: .env  README.md  pyproject.toml
python/examples/: INTEGRATION_GUIDE.md  README.md  test-account-endpoint.py  test-all-endpoints.py  test-batch-operations.py  test-customer-endpoint.py  test-customerext-endpoint.py  test-deposit-endpoint.py  test-gaming-endpoint.py  test-refer-friend-endpoint.py  test-simple-failures.py  test-system-endpoint.py  test-validation-failures.py  test-wallet-balance-endpoint.py  test-withdraw-endpoint.py  validate-account-schema.py
python/src/python/: index.py
python/src/python/core/: DataPipelineClient.py
python/src/python/models/: AccountEvent.py  CustomerExtEvent.py  CustomerProfile.py  DepositEvent.py  GamingActivityEvent.py  ReferFriendEvent.py  SystemEvent.py  WalletBalanceEvent.py  WithdrawEvent.py  index.py
python/src/python/utils/: crypto.py
python/tests/: pytest.ini  setup.py  test_client.py
(+76 files in other folders)
